test/ui/tests/parsing/invalid-indentation-too-deep.stderr
error[E046]: invalid indentation consisting of 8 spaces
 --> ${TEST_FOLDER}/parsing/invalid-indentation-too-deep.lushui:4:1
  |
4 |         x: X
  | ^^^^^^^^ 
  |
 note: indentation is greater than 4 and therefore too deep

error: aborting due to previous error

